# ShardScript

./: .gitignore  CMakeLists.txt  CMakePresets.json  SYNTAX_BIBLE.md  ShardScript.sln  build_core_and_strings.bat  build_debug.bat  build_debug.sh  build_lsp.bat  build_release.bat  build_release.sh  configure_debug.bat  cpp.hint  diff.txt  library-guide.md  modules.md  readme.md  test_list.ss  tree.txt
ShardScript/: ArgumentsParser.cpp  CMakeLists.txt  InterpreterConsole.cpp  ShardScript.rc  ShardScript.vcxproj  ShardScript.vcxproj.filters  cpp.hint  framework.ss  main.cpp  make_stub.py  single_header.py  src.ss
ShardScript.Framework/: CMakeLists.txt  RCb80608  Resource.rc  ShardScript.Framework.sln  ShardScript.Framework.vcxproj  ShardScript.Framework.vcxproj.filters  dllmain.cpp  resources.h  resources.hpp
ShardScript.Framework/include/framework/: PrimitivesLoading.h
ShardScript.Framework/primitives/: ArrayPrimitive.cpp  BooleanPrimitive.cpp  CharPrimitive.cpp  DoublePrimitive.cpp  IntegerPrimitive.cpp  PrimitivesLoading.h  PrimitivesLoading.hpp  StringPrimitive.cpp
ShardScript.Framework/src/collections/: List.cpp
ShardScript.Framework/src/filesystem/: Directory.cpp  File.cpp
ShardScript.Framework/src/primitives/: ArrayPrimitive.cpp  BooleanPrimitive.cpp  CharPrimitive.cpp  IntegerPrimitive.cpp  StringPrimitive.cpp
ShardScript.Framework/system/: Random.cpp  Random.ss  async.shard.cpp  cinterop.shard.cpp  collections.shard.cpp  constream.shard.cpp  environment.shard.cpp  filesystem.shard.cpp  http.shard.cpp  io.shard.cpp  json.shard.cpp  math.random.shard.cpp  math.shard.cpp  reflection.shard.cpp  shard.collections.cpp  shard.constream.cpp  shard.debug.cpp  shard.io.cpp  shard.random.cpp  socket.shard.cpp  streams.shard.cpp  strings.shard.cpp  subprocess.shard.cpp
ShardScript.Framework/system/collections/: List.cpp  List.ss
ShardScript.Framework/system/filesystem/: Directory.cpp  Directory.ss  File.cpp  File.ss
ShardScript.Framework/system/math/: Random.cpp  Random.ss
ShardScript.Framework/system/stdio/: Constream.cpp  Constream.ss
ShardScript.Interpreter/: CMakeLists.txt  InteractiveConsole.cpp  InteractiveConsole.h  InteractiveConsole.hpp  RCa13968  ShardScript.Interpreter.cpp  ShardScript.Interpreter.rc  ShardScript.Interpreter.sln  ShardScript.Interpreter.vcxproj  ShardScript.Interpreter.vcxproj.filters
ShardScript.Interpreter/utilities/: ArgumentsParser.cpp  AssociateRegistry.cpp  ExecutableVersion.cpp  InterpreterUtilities.h  InterpreterUtilities.hpp
ShardScript.LspServer/: CMakeLists.txt  ShardScript.LspServer.cpp
ShardScript/CMake/: libuv.cmake
ShardScript/include/: ShardScript.hpp
ShardScript/include/ffi/: ffi.h
ShardScript/include/shard/: ApplicationDomain.hpp  CompilationContext.hpp  FrameworkLoader.hpp  FrameworkModule.hpp  InterpreterConsole.h  ShardScript.h  ShardScriptAPI.h  ShardScriptAPI.hpp  ShardScriptExtern.hpp  ShardScriptExternAPI.h  ShardScriptLIB.hpp  ShardScriptVersion.h  ShardScriptVersion.hpp  ShardTypes.h  SyntaxVisitor.h  SyntaxVisitor.hpp  Vector.h  Vector.hpp
ShardScript/include/shard/analysis/: Diagnostic.hpp  DiagnosticsContext.hpp
ShardScript/include/shard/compilation/: AbstractEmiter.h  AbstractEmiter.hpp  AsyncAnalysisPass.hpp  AsyncEmissionPass.hpp  AsyncHoistingPass.hpp  AsyncStateMachineInfo.hpp  AsyncStateMachineLowering.hpp  ByteCodeDecoder.h  ByteCodeDecoder.hpp  ByteCodeEncoder.h  ByteCodeEncoder.hpp  ByteCodeGenerator.h  LayoutGenerator.hpp  OperationCode.h  OperationCode.hpp  ProgramDisassembler.h  ProgramDisassembler.hpp  ProgramVirtualImage.h  ProgramVirtualImage.hpp
ShardScript/include/shard/framework/: FrameworkLoader.h  FrameworkModule.h
ShardScript/include/shard/lexical/: FileReader.hpp  LexicalAnalyzer.hpp  LexicalBuffer.hpp  SourceProvider.hpp  StringStreamReader.hpp  TokenType.hpp
ShardScript/include/shard/parsing/: FileReader.h  LayoutGenerator.h  LexicalAnalyzer.h  (+19 more)
ShardScript/include/utilities/: Console.hpp  Diagnostics.hpp  Exceptions.hpp  LibraryLoader.hpp  SemanticVersion.hpp  Strings.hpp
ShardScript/src/: ApplicationDomain.cpp  CompilationContext.cpp  FrameworkLoader.cpp  ShardScriptExtern.cpp  ShardScriptVersion.cpp  SyntaxVisitor.cpp  Vector.cpp
ShardScript/src/analysis/: Diagnostic.cpp  DiagnosticSeverity.cpp  DiagnosticsContext.cpp
ShardScript/src/compilation/: AbstractEmiter.cpp  AsyncAnalysisPass.cpp  AsyncEmissionPass.cpp  AsyncHoistingPass.cpp  AsyncStateMachineLowering.cpp  ByteCodeDecoder.cpp  ByteCodeEncoder.cpp  ByteCodeGenerator.cpp  LayoutGenerator.cpp  ProgramDisassembler.cpp
ShardScript/src/framework/: FrameworkLoader.cpp
ShardScript/src/lexical/: FileReader.cpp  LexicalAnalyzer.cpp  LexicalBuffer.cpp  StringStreamReader.cpp
ShardScript/src/parsing/: FileReader.cpp  LayoutGenerator.cpp  LexicalAnalyzer.cpp  SemanticAnalyzer.cpp  SequenceSourceReader.cpp  SourceParser.cpp  SourceReader.cpp  StringStreamReader.cpp  SyntaxFacts.cpp  SyntaxTreeParser.cpp  SyntaxVisitor.cpp
ShardScript/src/runtime/: AbstarctInterpreter.cpp  AbstractInterpreter.cpp  ArgumentsSpan.cpp  CallStackFrame.cpp  ConsoleHelper.cpp  EvalStack.cpp  EventLoop.cpp  GarbageCollector.cpp  InboundVariablesContext.cpp  InteractiveConsole.cpp  NativeAsync.cpp  ObjectInstance.cpp  PrimitiveMathModule.cpp  ProgramDisassembler.cpp  TypeShapeCache.cpp  VariableRegister.cpp  VirtualMachine.cpp
ShardScript/src/semantic/: DeclarationCollector.cpp  ExpressionBinder.cpp  NamespaceTree.cpp  PrimitiveOperators.cpp  ScopeVisitor.cpp  SemanticModel.cpp  SemanticScope.cpp  SemanticValidator.cpp  SymbolBuilder.cpp  SymbolFactory.cpp  SymbolTable.cpp  TypeBinder.cpp
ShardScript/src/syntax/: SymbolBuilder.cpp  SymbolFactory.cpp  SyntaxFacts.cpp  SyntaxHelpers.cpp  SyntaxSymbol.cpp
ShardScript/src/utilities/: ArgumentsParser.cpp  AssociateRegistry.cpp  Console.cpp  Diagnostics.cpp  Exceptions.cpp  ExecutableVersion.cpp  LibraryLoader.cpp  MemoryLeakDetector.cpp  SemanticVersion.cpp  Strings.cpp
test_scripts/dependency_loading/libs/: CMakeLists.txt  circular_lib_a.shard.cpp  circular_lib_b.shard.cpp
(+863 files in other folders)
